--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
                             }
                             
                             <div class="text-center position-absolute bottom-0 start-0 w-100">
-                                <form method="get" asp-controller="Cv" asp-action="CV" asp-route-id="@cv.Id">
+                                <form method="get" asp-controller="Cv" asp-action="Inspect" asp-route-id="@cv.OwnerId">
                                      <button type="submit" class="btn text-light"
                                                 style="background-color:#ff6219; margin-bottom:2rem;">
                                                 Visa CV
