--- a/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
@@ -35,7 +35,7 @@
 						<div class="mb-5  text-body">
 										<div class="d-flex flex-column justify-content-center mt-2" style="margin-bottom:1rem;">
 
-											<a asp-controller="Cv" asp-action="Cv" asp-route-id="@Model.User.Id" class="btn" style="background-color:#fff; color:#ff6219; margin-bottom:1rem;"><i class="fa-solid fa-file-lines"></i>Visa CV</a>
+											<a asp-controller="Cv" asp-action="Inspect" asp-route-id="@Model.User.Id" class="btn" style="background-color:#fff; color:#ff6219; margin-bottom:1rem;"><i class="fa-solid fa-file-lines"></i>Visa CV</a>
                                            
 											<a asp-controller="Account" asp-action="Settings" asp-route-id="@Model.User.Id" class="btn" style="background-color:#fff; color:#ff6219; margin-bottom:1rem;"><i class="fa-solid fa-gear"></i>Ändra Profil</a>
 
