La till mer projekt

--- a/CV_Projekt/CV_Projekt/Views/Cv/Update.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Cv/Update.cshtml
@@ -195,7 +195,7 @@
         </form>
 
         <form method="post" asp-action="AddSkill">
-            <input asp-for="CvId" value="@Model.CvId" />
+            <input asp-for="CvId" value="@Model.CvId" hidden />
             <div class="row py-2">
                 <h6>Lägg till skills</h6>
                 <div class="col-md-6">
