--- a/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
@@ -34,7 +34,7 @@
 					<div class="card-body p-2 text-black">
 						<div class="mb-5  text-body">
 										<div class="d-flex flex-column justify-content-center mt-2" style="margin-bottom:1rem;">
-											@if (!Model.User.isPrivate || Model.User.Id.Equals(User.FindFirstValue(ClaimTypes.NameIdentifier)))
+											@if (!Model.User.isPrivate || Model.User.Id.Equals(User.FindFirstValue(ClaimTypes.NameIdentifier)) || User.Identity.IsAuthenticated)
 											{
 												<a asp-controller="Cv" asp-action="Inspect" asp-route-id="@Model.User.Id" class="btn" style="background-color:#fff; color:#ff6219; margin-bottom:1rem;"><i class="fa-solid fa-file-lines"></i>Visa CV</a>
 											}
