--- a/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
@@ -114,7 +114,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            <div class="footer-shared">&copy; 2024 - CV_Projekt - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+			<div class="footer-shared">
+				&copy; CV_Projekt - Est.2024 - <i>Emil Lindh, Hanna Carlsson Stoor, Linnea Wilcox, Rebecka Lewin</i> -
 			</div>
 		</div>
     </footer>
