--- a/CV_Projekt/CV_Projekt/Views/Cv/Inspect.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Cv/Inspect.cshtml
@@ -23,6 +23,8 @@
 						<div class="ms-3 text-light" style="margin-top: 100px;">
 							<h4 style="text-align:center;">CV</h4>
 									<h5 style="text-align:center;">@Model.Owner.FirstName @Model.Owner.LastName</h5>
+									<h5 style="text-align:right">Visningar</h5>
+									<h6 style="text-align:right"></h6>
 							</div>
 						</div>
 							</div>
