--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -96,23 +96,20 @@
 
 <div class="container">
     <div class="row justify-content-center">
+        
         <div class="col-md-4">
+            <div><h6 style="color:#fff; text-align:center">Senaste tillagda projektet</h6></div>
                 <div class="card">
+                    
                     @if(Model.LatestProject !=null)
                     {
-                        @* var projectOwner = Model.Users.FirstOrDefault(u => u.Id == proj.CreatorId); *@
+                        
                         <div class="card-body position-relative">
                         <div class="card-header">@Model.LatestProject.Title</div>
                         <div class="card-text">@Model.LatestProject.Description</div>
                         <div class="card-text fw-light">Datum:</div>
                         <div class="card-text fw-light">Start: @Model.LatestProject.StartDate.ToString("yy-MM-dd") Slut: @Model.LatestProject.EndDate.ToString("yy-MM-dd")</div>
-                        @* <div class="card-text fw-light">Projektägare:</div> *@
-                        @* @if (projectOwner != null) 
-                        {
-                            <div class="card-text fw-light">@projectOwner.FirstName @projectOwner.LastName</div>
-                        } else {
-                            <div class="card-text fw-light">Ingen projektägare hittades.</div>
-                        } *@
+                       
                         </div>
                     }
                     <div class="text-center">
@@ -126,27 +123,20 @@
                     </div>
                 </div>
             </div>
+       
         </div>
     </div>
 
 
 
 <div class="d-flex justify-content-center mt-2">
-    @if (User.Identity.IsAuthenticated)
-    {
-        <a asp-controller="Project" asp-action="Add" class="btn text-light" style="background-color:#ff6219; margin:1rem;">Skapa nytt projekt</a>
-    }
+    
+    
+    
 
-    @if(!User.Identity.IsAuthenticated)
-    {
-        <a asp-controller="Account" asp-action="LogIn" class="btn text-light" style="background-color:#ff6219; margin:1rem;">Logga in</a>
-    }
-    else
-    {
-        <form method="post" asp-controller="Account" asp-action="LogOut">
-            <button type="submit" class="btn  text-light" style="background-color:#ff6219; margin:1rem;">Logga ut</button>
-        </form>
-    }
+    
+        <a asp-controller="Project" asp-action="ShowProjectsView" class="btn text-light" style="background-color:#ff6219; margin:1rem;">Visa alla projekt</a>
+   
 </div>
 <div>
     <a  class="btn btn-primary text-light"
@@ -157,11 +147,4 @@
         Visa Meddelanden
     </a>
 </div>
-<div>
-    <a class="btn btn-primary text-light"
-       style="background-color:#ff6219; margin-bottom:2rem;"
-       asp-controller="Project"
-       asp-action="ShowProjectsView">
-        Visa Alla Projekt
-    </a>
-</div>
+
