--- a/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
     <header>
 
         
-        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <nav class="navbar navbar-expand bg-dark navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/Home/"><i class="fa-solid fa-robot" style="color:#ff6219;"></i> Curriculum Vitae</a>
                     <button data-mdb-button-init class="navbar-toggler" 
