--- a/CV_Projekt/CV_Projekt/Views/Cv/Inspect.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Cv/Inspect.cshtml
@@ -1,5 +1,7 @@
 ﻿@model CvViewModel
 
+@using System.Security.Claims
+
 
 <section class="h-100">
 	<div class="container py-5 h-100">
@@ -23,7 +25,10 @@
 						<div class="ms-3 text-light" style="margin-top: 100px;">
 							<h4 style="text-align:center;">CV</h4>
 									<h5 style="text-align:center;">@Model.Owner.FirstName @Model.Owner.LastName</h5>
-									<h5 style="text-align:right">Visningar</h5>
+									@if(Model.Owner.Id.Equals(User.FindFirstValue(ClaimTypes.NameIdentifier)))
+									{
+										<h5 style="text-align:right">Visningar: @Model.CV.Views</h5>
+									}
 									<h6 style="text-align:right"></h6>
 							</div>
 						</div>
@@ -56,7 +61,7 @@
 												<p class="fw-light">Kontaktinformation saknas</p>
 											}
 
-											<h6 class="lead fw-normal mb-1" style="color:#ff6219;">Skills</h6>
+											<h6 class="lead fw-normal mb-1" style="color:#ff6219;">Kompetenser</h6>
 										
 
 											@if (Model.Skills != null && Model.Skills.Any())
@@ -70,7 +75,7 @@
 											}
 											else
 											{
-												<p class="fw-light">Användaren har inga listade Skills</p>
+												<p class="fw-light">Användaren har inga listade kompetenser</p>
 											}
 
 										</div>
