--- a/CV_Projekt/CV_Projekt/Views/Project/Update.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Project/Update.cshtml
@@ -79,7 +79,7 @@
                
             <div class="py-3 pb-4 border-bottom">
                 <button type="submit" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Spara Projekt</button>
-                <button class="btn border border-light button" style="background-color: #fff;; color: #ff6219">Avbryt</button>
+                <button asp-action="Project" onclick="history.back()" class="btn border border-light button" style="background-color: #fff; color: #ff6219";>Tillbaka</button>
             </div>
            
            
