--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
             <div class="col">
                 <div class="card h-100 d-flex flex-column">
                     <div class="card-body position-relative flex-grow-1" style="padding-bottom: 70px;">
-                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(107).webp" alt="image 1"
+                        <img src="@Url.Content(user.PictureUrl)" alt="image 1"
                              class="card-img-top w-100 rounded-3">
                         <div class="scrollable-content" style="max-height: 80%; overflow-y: auto; padding-bottom: 10px;">
 
