--- a/CV_Projekt/CV_Projekt/Views/Project/Project.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Project/Project.cshtml
@@ -91,7 +91,7 @@ style="margin: 0;
                 }
 
                 <div class="d-flex justify-content-start mb-4">
-                    <button asp-action="ShowProjectsView" class="btn text-light" style="background-color:#fff; border: 1px solid #ff6219; color:#ff6219; margin-bottom:2rem" onclick="history.back()">
+                    <button asp-action="ShowProjectsView" class="btn" style="background-color:#fff; border: 1px solid #ff6219; color:#ff6219; margin-bottom:2rem" onclick="history.back()">
                         Tillbaka
                     </button>
                 </div>
